--- a/paginas/barbells_plates.html
+++ b/paginas/barbells_plates.html
@@ -136,6 +136,33 @@
             
         </section>
 
+        <section class="mainCompras__carousel">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="../imagenes/bumper20.jpg" class="d-block w-100" alt="rackPro">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../imagenes/bumper15.jpg" class="d-block w-100" alt="rackPro">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../imagenes/bumper10.jpg" class="d-block w-100" alt="rackPro">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../imagenes/bumper5.jpg" class="d-block w-100" alt="rackPro">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        </section>
+
         <section class="mainCompras__descripcionProducto">
             <div class="mainCompras__descripcionProducto--texto">
                 <h3> Weightlifting plates </h3>
