Arregle los textos de la seccion de cardio

--- a/paginas/cardio.html
+++ b/paginas/cardio.html
@@ -118,8 +118,8 @@
             </div>
 
             <div class="main__productos--info">
-                <h3>Professional</h3>
-                <p>Mas alto estandar de calidad - Seguridad - max: 840kg.</p>
+                <h3> Concept2 RowErgl</h3>
+                <p> La famosa maquina de remo.</p>
             </div>
         </section>
 
@@ -133,8 +133,8 @@
             </div>
 
             <div class="main__productos--info">
-                <h3>Semiprofesional</h3>
-                <p>Mas alto estandar de calidad - Seguridad - max: 840kg.</p>
+                <h3>Concept2 Bike Erg</h3>
+                <p> Utilizada por los mejores atletas.</p>
             </div>
         </section>
 
@@ -145,8 +145,8 @@
             </div>
 
             <div class="main__productos--info">
-                <h3>Wall Mount</h3>
-                <p>Mas alto estandar de calidad - Seguridad - max: 840kg.</p>
+                <h3> Assault bike</h3>
+                <p> La maquina que va a intensificar tus entrenamientos</p>
             </div>
         </section>
 
@@ -157,8 +157,8 @@
             </div>
 
             <div class="main__productos--info">
-                <h3>Wall Mount</h3>
-                <p>Mas alto estandar de calidad - Seguridad - max: 840kg.</p>
+                <h3> Concept2 Ski Erg</h3>
+                <p> Maquina de simulador de ski. </p>
             </div>
         </section>
 
