--- a/paginas/barbells_lu.html
+++ b/paginas/barbells_lu.html
@@ -119,7 +119,7 @@
 
         <section class="mainCompras__imagenProductos">
             <div class="mainCompras__imagenProductos--div1">
-                <img src="../imagenes/luxiaojun_background1.jpg" alt="" />
+                <img src="../imagenes/luxiaojun_background1.jpg" alt="imagenLu" />
             </div>
 
             <div class="mainCompras__imagenProductos--div2">
@@ -138,7 +138,7 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../imagenes/luxiaojun_background1.jpg" class="d-block w-100" alt="...">
+                        <img src="../imagenes/luxiaojun_background1.jpg" class="d-block w-100" alt="imagenLu">
                     </div>
                     <div class="carousel-item">
                         <img src="../imagenes/lu4copia.jpg" class="d-block w-100" alt="imagenBarbellLu">
